# handler/response.go
@@ -2,6 +2,7 @@ package handler
 
 import (
 	"fmt"
+	"github.com/dougcunha1/gopportunities/schemas"
 	"github.com/gin-gonic/gin"
 	"net/http"
 )
@@ -20,4 +21,14 @@ func sendSuccess(ctx *gin.Context, op string, data interface{}) {
 		"message": fmt.Sprintf("operation from handler: %s successfull", op),
 		"data":    data,
 	})
+}
+
+type ErrorResponse struct {
+	Message   string `json:"message"`
+	ErrorCode string `json:"errorCode"`
+}
+
+type CreateOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
 }
